...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ltm-bB-WnZ">
                                                <rect key="frame" x="53" y="5.5" width="281.5" height="44.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="aTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wTW-PY-Hao">
                                                <rect key="frame" x="53" y="6" width="281.5" height="44.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="bTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="nwE-ZW-UWX">
                                                <rect key="frame" x="53" y="5.5" width="281.5" height="44.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="cTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WtA-L4-QEv">
                                                <rect key="frame" x="123" y="14" width="106" height="27.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="solve"/>
                                                <state key="normal" title="Solve"/>
                                                <connections>
...
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cP6-LX-OjY">
                                                <rect key="frame" x="105.5" y="5.5" width="211.5" height="44.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="rootOneTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
                                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="abb-fE-XoZ">
                                                <rect key="frame" x="105.5" y="6" width="211.5" height="44.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="rootTwoTextField"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
...
